--- a/dataVisualization/newDesign.html
+++ b/dataVisualization/newDesign.html
@@ -70,6 +70,24 @@
             font-size: 36px;
         }
 
+        @media screen and (max-width: 1000px) {
+            .black-top-text, .airline, .to-from, .text-container, .text2, .delay {
+                font-size: 16px; /* Smaller font size for smaller screens */
+            }
+
+            .image-container img {
+                width: 150px; /* Smaller image size for smaller screens */
+                height: 150px;
+                margin-left: 10px; /* Adjusted margin */
+            }
+
+            .image-container, .text-container, .text2, .delay {
+                margin: 10px; /* Adjusted margin for smaller screens */
+            }
+
+            /* Add more adjustments as needed */
+        }
+
     </style>
 </head>
 <body>
