trying to fix dynamic popup html

--- a/chrome_extension/html/index.html
+++ b/chrome_extension/html/index.html
@@ -4,97 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-    body {
-    width: 800px;
-    height: 600px;
-    margin: 0;
-    padding: 0;
-  }
-
-        .black-top {
-            height: 20vh;
-            background-color: black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .black-top-text {
-            color: white;
-            font-size: 8vw; /* Adjust the value as needed */
-}
-
-
-        .block {
-            display: flex;
-            flex-direction: column;
-            margin-top: 10px;
-        }
-
-        .image-container {
-            display: flex;
-            margin: 20px;
-        }
-
-        .image-container img {
-            width: 200px;
-            height: 200px;
-            margin-left: 50px;
-        }
-
-        .text-container {
-            margin-top: 10px;
-            margin-left: 100px;
-            font-family: 'Trebuchet MS', sans-serif;
-            font-size: 36px;
-        }
-
-        .airline {
-            font-size: 24px;
-            color: #333;
-            text-align: center;
-        }
-
-        .text2 {
-            margin-top: 10px;
-            margin-left: 100px;
-            font-family: 'Trebuchet MS', sans-serif;
-            font-size: 36px;
-        }
-
-        .to-from {
-            font-size: 24px;
-            color: #333;
-            text-align: center;
-        }
-
-        .delay {
-            margin-top: 45px;
-            margin-left: 100px;
-            font-family: 'Trebuchet MS', sans-serif;
-            font-size: 36px;
-        }
-
-        @media screen and (max-width: 1000px) {
-            .black-top-text, .airline, .to-from, .text-container, .text2, .delay {
-                font-size: 16px; /* Smaller font size for smaller screens */
-            }
-
-            .image-container img {
-                width: 150px; /* Smaller image size for smaller screens */
-                height: 150px;
-                margin-left: 10px; /* Adjusted margin */
-            }
-
-            .image-container, .text-container, .text2, .delay {
-                margin: 10px; /* Adjusted margin for smaller screens */
-            }
-
-            /* Add more adjustments as needed */
-        }
-
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="black-top">
