--- a/Flight Delay Chrome Extension/popup.html
+++ b/Flight Delay Chrome Extension/popup.html
@@ -27,15 +27,22 @@
     </div>
 
     <div class = "box1">
-      <img src="delta.png" style="width:120px;height:120px;">
-      <h2>Tue, Jan 7</h2>
-      <p>9:00 - 10:53pm</p>
-      <p>1 hr 53 mins </p>
-      <a href="#">Delta Airlines</a>
-      <h2>Chance of Delay:</h2>
-      <p style="color:rgb(0, 255, 4);" >6%</p>
-      <p>Possible delay time 2hrs</p>
-      <a href="#">What does this mean?</a>
+      <img src="delta.png" class = "delta" style="width:120px;height:120px;">
+      <h2 class="Date">Tue, Jan 7</h2>
+
+      <p class="Time">9:00 - 10:53pm</p>
+
+      <p class="Span">1 hr 53 mins </p>
+
+      <p class = "DeltaAirlines">Delta Airlines</a>
+
+      <h3 class="DelayChance">Chance of Delay:</h3>
+
+      <h1 style="color:rgb(0, 255, 4);" class="Percent">6%</h1>
+
+      <p class="Possible">Possible delay time 2hrs</p>
+
+      <p class = "What">What does this mean?</p>
       </div>
 
   </div>  
